// javac -d bin src/Client/Client.java; java -cp bin Client.Client
// javac -d bin src/Client/Client.java
// java -cp bin Client.Client

package Client;

import java.io.*;
import java.net.*;

public class Client 
{
    private static Socket socket = null;
    private static ServerSocket serverSocket = null;
    private static DataInputStream dataInputStream = null;
    private static DataOutputStream dataOutputStream = null;

    public static final int PORT = 8000;
    public static final String SERVER_ADDR = "127.0.0.1";

    public static void main(String [] args) {
        System.out.println(makeServerRequest(SERVER_ADDR, PORT, "LOREM IPSUM"));
    }
    
    public static String makeServerRequest(String server_addr, int port, String request) 
    {
        String response;
        try
        {
            socket = new Socket(server_addr, port);
            System.out.println("Connected");
            dataOutputStream = new DataOutputStream(socket.getOutputStream());
            dataOutputStream.writeUTF(request);
            dataOutputStream.flush(); 
            dataInputStream = new DataInputStream(socket.getInputStream());
            response = dataInputStream.readUTF();
            dataInputStream.close();
            dataOutputStream.close();
            socket.close();
            return response;
        }
        catch(Exception e) 
        {
            System.out.println("An error occurred: " + e);
        }
        return "";
    }
}