package Client;

public class Consumer extends User
{
    public Consumer ()
    {

    }    
}
