package Client;

import java.util.ArrayList;

public class Voluntary extends User
{
    ArrayList <String> allowedEventType;
	
	public Voluntary ()
	{
		super();
	}
	
	// fornisce le date in cui può tenere una visita
	public void give_disponibility (int date, String event)
	{
		
	}    
}
